--- a/scss/base/components/_card.scss
+++ b/scss/base/components/_card.scss
@@ -27,6 +27,7 @@
     h3{
       font-family: $georgia;
       font-weight: normal;
+      font-size: 1.3rem;
     }
     p{
         font-family: $georgia;
@@ -55,6 +56,7 @@
     }
     & + p{
       padding-top: 5px;
+      font-size: 1rem;
     }
   }
 
