--- a/scss/base/components/_layout.scss
+++ b/scss/base/components/_layout.scss
@@ -7,7 +7,7 @@ $paragraph-width: 575px;
 
 // Sections. Sections should be used to offset sections of the text, like graphics etc.
   section {
-  padding: 1.5rem 0;
+  margin: 2.5rem 0;
 }
 
 
